# Wealth-Data-Modeling

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pylint.yml
scripts/: WealthData.py  scripts.py
