[tool.poetry]
name = "data-modelling"
version = "0.1.0"
description = ""
authors = ["Moein"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
psycopg2 = "^2.9.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
