[tool.poetry]
name = "data-modelling"
version = "0.1.0"
description = ""
authors = ["Moein"]
readme = "README.md"
packages = [{include = "data_modelling"}]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.6"
pyspark = "^3.4.1"
isort = "^5.12.0"
black = "^23.7.0"
sqlalchemy = "^2.0.19"
spark = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
